--- a/spec/cassettes/base/put.yml
+++ b/spec/cassettes/base/put.yml
@@ -12,22 +12,22 @@
       code: 404
       message: Not Found
     headers: 
-      x-ua-compatible: 
-      - IE=Edge,chrome=1
-      content-type: 
-      - application/json; charset=utf-8
       server: 
       - nginx/0.8.53
       date: 
       - <%= Time.now.utc %>
-      x-runtime: 
-      - "0.027039"
+      content-type: 
+      - application/json; charset=utf-8
+      transfer-encoding: 
+      - chunked
       status: 
       - 404 Not Found
       cache-control: 
       - no-cache
-      transfer-encoding: 
-      - chunked
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.106347"
     body: 404 Not Found
     http_version: "1.1"
 - !ruby/struct:VCR::HTTPInteraction 
@@ -43,28 +43,57 @@
       code: 201
       message: Created
     headers: 
-      x-ua-compatible: 
-      - IE=Edge,chrome=1
-      content-type: 
-      - application/json; charset=utf-8
-      x-runtime: 
-      - "0.281184"
-      date: 
-      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
-      cache-control: 
-      - no-cache
-      status: 
-      - 201 Created
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - application/json; charset=utf-8
       transfer-encoding: 
       - chunked
-    body: "{\"id\":37766,\"created_at\":\"2011-03-04T09:33:01+00:00\",\"updated_at\":\"2011-03-04T09:33:01+00:00\",\"title\":\"Testing\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":31,\"priority\":null,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+      status: 
+      - 201 Created
+      cache-control: 
+      - no-cache
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.402312"
+    body: "{\"id\":38706,\"created_at\":\"2011-03-10T19:01:26+00:00\",\"updated_at\":\"2011-03-10T19:01:26+00:00\",\"title\":\"Testing\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":87,\"priority\":null,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :head
+    uri: https://kanbanery.com:443/api/v1/test.json
+    body: 
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 404
+      message: Not Found
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - text/html; charset=utf-8
+      status: 
+      - 404 Not Found
+      cache-control: 
+      - no-cache
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.006677"
+    body: 
     http_version: "1.1"
 - !ruby/struct:VCR::HTTPInteraction 
   request: !ruby/struct:VCR::Request 
     method: :put
-    uri: https://envision.kanbanery.com:443/api/v1/tasks/37766.json
+    uri: https://envision.kanbanery.com:443/api/v1/tasks/38706.json
     body: task[title]=Testing123
     headers: 
       x-kanbanery-apitoken: 
@@ -74,23 +103,52 @@
       code: 200
       message: OK
     headers: 
-      x-ua-compatible: 
-      - IE=Edge,chrome=1
-      etag: 
-      - "\"cdf5e550256defe660da2ad26af79eb6\""
-      content-type: 
-      - application/json; charset=utf-8
-      x-runtime: 
-      - "0.112208"
-      date: 
-      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
-      cache-control: 
-      - max-age=0, private, must-revalidate
-      status: 
-      - 200 OK
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - application/json; charset=utf-8
       transfer-encoding: 
       - chunked
-    body: "{\"id\":37766,\"created_at\":\"2011-03-04T09:33:01+00:00\",\"updated_at\":\"2011-03-04T09:33:05+00:00\",\"title\":\"Testing123\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":31,\"priority\":0,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+      status: 
+      - 200 OK
+      etag: 
+      - "\"255dd9fbdab98a13483dbd1682cb498c\""
+      cache-control: 
+      - max-age=0, private, must-revalidate
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.405632"
+    body: "{\"id\":38706,\"created_at\":\"2011-03-10T19:01:26+00:00\",\"updated_at\":\"2011-03-10T19:01:35+00:00\",\"title\":\"Testing123\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":87,\"priority\":0,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :head
+    uri: https://kanbanery.com:443/api/v1/test.json
+    body: 
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 404
+      message: Not Found
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - text/html; charset=utf-8
+      status: 
+      - 404 Not Found
+      cache-control: 
+      - no-cache
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.005465"
+    body: 
     http_version: "1.1"
