--- a/spec/cassettes/task/move_to_previous_column.yml
+++ b/spec/cassettes/task/move_to_previous_column.yml
@@ -12,161 +12,29 @@
       code: 201
       message: Created
     headers: 
-      x-ua-compatible: 
-      - IE=Edge,chrome=1
-      content-type: 
-      - application/json; charset=utf-8
       server: 
       - nginx/0.8.53
       date: 
       - <%= Time.now.utc %>
-      x-runtime: 
-      - "0.187801"
+      content-type: 
+      - application/json; charset=utf-8
+      transfer-encoding: 
+      - chunked
       status: 
       - 201 Created
       cache-control: 
       - no-cache
-      transfer-encoding: 
-      - chunked
-    body: "{\"id\":36822,\"created_at\":\"2011-02-25T06:37:54+00:00\",\"updated_at\":\"2011-02-25T06:37:54+00:00\",\"title\":\"Test Task\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":20,\"priority\":null,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
-    http_version: "1.1"
-- !ruby/struct:VCR::HTTPInteraction 
-  request: !ruby/struct:VCR::Request 
-    method: :put
-    uri: https://envision.kanbanery.com:443/api/v1/tasks/36822.json
-    body: task[owner_id]=&task[location]=next_column
-    headers: 
-      x-kanbanery-apitoken: 
-      - secret
-  response: !ruby/struct:VCR::Response 
-    status: !ruby/struct:VCR::ResponseStatus 
-      code: 200
-      message: OK
-    headers: 
       x-ua-compatible: 
       - IE=Edge,chrome=1
-      etag: 
-      - "\"c7c42d67d606467a57f9beeeec2f8404\""
-      content-type: 
-      - application/json; charset=utf-8
-      server: 
-      - nginx/0.8.53
-      date: 
-      - <%= Time.now.utc %>
       x-runtime: 
-      - "0.268056"
-      status: 
-      - 200 OK
-      cache-control: 
-      - max-age=0, private, must-revalidate
-      transfer-encoding: 
-      - chunked
-    body: "{\"id\":36822,\"created_at\":\"2011-02-25T06:37:54+00:00\",\"updated_at\":\"2011-02-25T06:37:58+00:00\",\"title\":\"Test Task\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15092,\"creator_id\":2608,\"owner_id\":2608,\"position\":7,\"priority\":0,\"ready_to_pull\":false,\"moved_at\":\"2011-02-25T06:37:58+00:00\",\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+      - "0.285662"
+    body: "{\"id\":38711,\"created_at\":\"2011-03-10T19:03:31+00:00\",\"updated_at\":\"2011-03-10T19:03:31+00:00\",\"title\":\"Test Task\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":91,\"priority\":null,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
     http_version: "1.1"
 - !ruby/struct:VCR::HTTPInteraction 
   request: !ruby/struct:VCR::Request 
-    method: :get
-    uri: https://envision.kanbanery.com:443/api/v1/projects/2817/columns.json
+    method: :head
+    uri: https://kanbanery.com:443/api/v1/test.json
     body: 
-    headers: 
-      x-kanbanery-apitoken: 
-      - secret
-  response: !ruby/struct:VCR::Response 
-    status: !ruby/struct:VCR::ResponseStatus 
-      code: 200
-      message: OK
-    headers: 
-      x-ua-compatible: 
-      - IE=Edge,chrome=1
-      etag: 
-      - "\"d1121ce95abe358a3d246bd6bd39d641\""
-      content-type: 
-      - application/json; charset=utf-8
-      server: 
-      - nginx/0.8.53
-      date: 
-      - <%= Time.now.utc %>
-      x-runtime: 
-      - "0.056488"
-      status: 
-      - 200 OK
-      cache-control: 
-      - max-age=0, private, must-revalidate
-      transfer-encoding: 
-      - chunked
-    body: "[{\"id\":15090,\"created_at\":\"2011-01-18T23:54:09+00:00\",\"updated_at\":\"2011-01-18T23:58:04+00:00\",\"type\":\"Column\",\"project_id\":2817,\"name\":\"Ready\",\"capacity\":null,\"fixed\":true,\"position\":1},{\"id\":15092,\"created_at\":\"2011-01-18T23:57:54+00:00\",\"updated_at\":\"2011-01-18T23:57:54+00:00\",\"type\":\"Column\",\"project_id\":2817,\"name\":\"WIP\",\"capacity\":null,\"fixed\":false,\"position\":2},{\"id\":15091,\"created_at\":\"2011-01-18T23:54:09+00:00\",\"updated_at\":\"2011-01-18T23:54:09+00:00\",\"type\":\"Column\",\"project_id\":2817,\"name\":\"Done\",\"capacity\":null,\"fixed\":true,\"position\":3}]"
-    http_version: "1.1"
-- !ruby/struct:VCR::HTTPInteraction 
-  request: !ruby/struct:VCR::Request 
-    method: :put
-    uri: https://envision.kanbanery.com:443/api/v1/tasks/36822.json
-    body: task[owner_id]=2608&task[location]=prev_column
-    headers: 
-      x-kanbanery-apitoken: 
-      - secret
-  response: !ruby/struct:VCR::Response 
-    status: !ruby/struct:VCR::ResponseStatus 
-      code: 200
-      message: OK
-    headers: 
-      x-ua-compatible: 
-      - IE=Edge,chrome=1
-      etag: 
-      - "\"55a37fa86d14ad7e2ac917d33ac16eae\""
-      content-type: 
-      - application/json; charset=utf-8
-      server: 
-      - nginx/0.8.53
-      date: 
-      - <%= Time.now.utc %>
-      x-runtime: 
-      - "0.248191"
-      status: 
-      - 200 OK
-      cache-control: 
-      - max-age=0, private, must-revalidate
-      transfer-encoding: 
-      - chunked
-    body: "{\"id\":36822,\"created_at\":\"2011-02-25T06:37:54+00:00\",\"updated_at\":\"2011-02-25T06:38:04+00:00\",\"title\":\"Test Task\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":2608,\"position\":20,\"priority\":0,\"ready_to_pull\":false,\"moved_at\":\"2011-02-25T06:38:04+00:00\",\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
-    http_version: "1.1"
-- !ruby/struct:VCR::HTTPInteraction 
-  request: !ruby/struct:VCR::Request 
-    method: :get
-    uri: https://envision.kanbanery.com:443/api/v1/projects/2817/columns.json
-    body: 
-    headers: 
-      x-kanbanery-apitoken: 
-      - secret
-  response: !ruby/struct:VCR::Response 
-    status: !ruby/struct:VCR::ResponseStatus 
-      code: 200
-      message: OK
-    headers: 
-      x-ua-compatible: 
-      - IE=Edge,chrome=1
-      etag: 
-      - "\"d1121ce95abe358a3d246bd6bd39d641\""
-      content-type: 
-      - application/json; charset=utf-8
-      server: 
-      - nginx/0.8.53
-      date: 
-      - <%= Time.now.utc %>
-      x-runtime: 
-      - "0.054432"
-      status: 
-      - 200 OK
-      cache-control: 
-      - max-age=0, private, must-revalidate
-      transfer-encoding: 
-      - chunked
-    body: "[{\"id\":15090,\"created_at\":\"2011-01-18T23:54:09+00:00\",\"updated_at\":\"2011-01-18T23:58:04+00:00\",\"type\":\"Column\",\"project_id\":2817,\"name\":\"Ready\",\"capacity\":null,\"fixed\":true,\"position\":1},{\"id\":15092,\"created_at\":\"2011-01-18T23:57:54+00:00\",\"updated_at\":\"2011-01-18T23:57:54+00:00\",\"type\":\"Column\",\"project_id\":2817,\"name\":\"WIP\",\"capacity\":null,\"fixed\":false,\"position\":2},{\"id\":15091,\"created_at\":\"2011-01-18T23:54:09+00:00\",\"updated_at\":\"2011-01-18T23:54:09+00:00\",\"type\":\"Column\",\"project_id\":2817,\"name\":\"Done\",\"capacity\":null,\"fixed\":true,\"position\":3}]"
-    http_version: "1.1"
-- !ruby/struct:VCR::HTTPInteraction 
-  request: !ruby/struct:VCR::Request 
-    method: :put
-    uri: https://envision.kanbanery.com:443/api/v1/tasks/.json
-    body: task[owner_id]=&task[location]=prev_column
     headers: 
       x-kanbanery-apitoken: 
       - secret
@@ -175,54 +43,343 @@
       code: 404
       message: Not Found
     headers: 
-      x-ua-compatible: 
-      - IE=Edge,chrome=1
-      content-type: 
-      - text/html; charset=utf-8
-      x-runtime: 
-      - "0.006377"
-      date: 
-      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
-      cache-control: 
-      - no-cache
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - text/html; charset=utf-8
       status: 
       - 404 Not Found
+      cache-control: 
+      - no-cache
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.005273"
+    body: 
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :put
+    uri: https://envision.kanbanery.com:443/api/v1/tasks/38711.json
+    body: task[location]=next_column&task[owner_id]=
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 200
+      message: OK
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - application/json; charset=utf-8
       transfer-encoding: 
       - chunked
+      status: 
+      - 200 OK
+      etag: 
+      - "\"0a32ddabb73e4d9f6e135450d18ac157\""
+      cache-control: 
+      - max-age=0, private, must-revalidate
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.557416"
+    body: "{\"id\":38711,\"created_at\":\"2011-03-10T19:03:31+00:00\",\"updated_at\":\"2011-03-10T19:03:39+00:00\",\"title\":\"Test Task\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15092,\"creator_id\":2608,\"owner_id\":2608,\"position\":15,\"priority\":0,\"ready_to_pull\":false,\"moved_at\":\"2011-03-10T19:03:39+00:00\",\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :head
+    uri: https://kanbanery.com:443/api/v1/test.json
+    body: 
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 404
+      message: Not Found
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - text/html; charset=utf-8
+      status: 
+      - 404 Not Found
+      cache-control: 
+      - no-cache
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.005265"
+    body: 
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :get
+    uri: https://envision.kanbanery.com:443/api/v1/projects/2817/columns.json
+    body: 
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 200
+      message: OK
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - application/json; charset=utf-8
+      transfer-encoding: 
+      - chunked
+      status: 
+      - 200 OK
+      etag: 
+      - "\"d1121ce95abe358a3d246bd6bd39d641\""
+      cache-control: 
+      - max-age=0, private, must-revalidate
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.056256"
+    body: "[{\"id\":15090,\"created_at\":\"2011-01-18T23:54:09+00:00\",\"updated_at\":\"2011-01-18T23:58:04+00:00\",\"type\":\"Column\",\"project_id\":2817,\"name\":\"Ready\",\"capacity\":null,\"fixed\":true,\"position\":1},{\"id\":15092,\"created_at\":\"2011-01-18T23:57:54+00:00\",\"updated_at\":\"2011-01-18T23:57:54+00:00\",\"type\":\"Column\",\"project_id\":2817,\"name\":\"WIP\",\"capacity\":null,\"fixed\":false,\"position\":2},{\"id\":15091,\"created_at\":\"2011-01-18T23:54:09+00:00\",\"updated_at\":\"2011-01-18T23:54:09+00:00\",\"type\":\"Column\",\"project_id\":2817,\"name\":\"Done\",\"capacity\":null,\"fixed\":true,\"position\":3}]"
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :head
+    uri: https://kanbanery.com:443/api/v1/test.json
+    body: 
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 404
+      message: Not Found
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - text/html; charset=utf-8
+      status: 
+      - 404 Not Found
+      cache-control: 
+      - no-cache
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.005268"
+    body: 
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :put
+    uri: https://envision.kanbanery.com:443/api/v1/tasks/38711.json
+    body: task[location]=prev_column&task[owner_id]=2608
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 200
+      message: OK
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - application/json; charset=utf-8
+      transfer-encoding: 
+      - chunked
+      status: 
+      - 200 OK
+      etag: 
+      - "\"5f1bdcef1e261ca77693ae041353bc4f\""
+      cache-control: 
+      - max-age=0, private, must-revalidate
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.320910"
+    body: "{\"id\":38711,\"created_at\":\"2011-03-10T19:03:31+00:00\",\"updated_at\":\"2011-03-10T19:03:54+00:00\",\"title\":\"Test Task\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":2608,\"position\":91,\"priority\":0,\"ready_to_pull\":false,\"moved_at\":\"2011-03-10T19:03:54+00:00\",\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :head
+    uri: https://kanbanery.com:443/api/v1/test.json
+    body: 
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 404
+      message: Not Found
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - text/html; charset=utf-8
+      status: 
+      - 404 Not Found
+      cache-control: 
+      - no-cache
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.008552"
+    body: 
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :get
+    uri: https://envision.kanbanery.com:443/api/v1/projects/2817/columns.json
+    body: 
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 200
+      message: OK
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - application/json; charset=utf-8
+      transfer-encoding: 
+      - chunked
+      status: 
+      - 200 OK
+      etag: 
+      - "\"d1121ce95abe358a3d246bd6bd39d641\""
+      cache-control: 
+      - max-age=0, private, must-revalidate
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.046003"
+    body: "[{\"id\":15090,\"created_at\":\"2011-01-18T23:54:09+00:00\",\"updated_at\":\"2011-01-18T23:58:04+00:00\",\"type\":\"Column\",\"project_id\":2817,\"name\":\"Ready\",\"capacity\":null,\"fixed\":true,\"position\":1},{\"id\":15092,\"created_at\":\"2011-01-18T23:57:54+00:00\",\"updated_at\":\"2011-01-18T23:57:54+00:00\",\"type\":\"Column\",\"project_id\":2817,\"name\":\"WIP\",\"capacity\":null,\"fixed\":false,\"position\":2},{\"id\":15091,\"created_at\":\"2011-01-18T23:54:09+00:00\",\"updated_at\":\"2011-01-18T23:54:09+00:00\",\"type\":\"Column\",\"project_id\":2817,\"name\":\"Done\",\"capacity\":null,\"fixed\":true,\"position\":3}]"
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :head
+    uri: https://kanbanery.com:443/api/v1/test.json
+    body: 
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 404
+      message: Not Found
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - text/html; charset=utf-8
+      status: 
+      - 404 Not Found
+      cache-control: 
+      - no-cache
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.005285"
+    body: 
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :put
+    uri: https://envision.kanbanery.com:443/api/v1/tasks/.json
+    body: task[location]=prev_column&task[owner_id]=
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 404
+      message: Not Found
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - text/html; charset=utf-8
+      transfer-encoding: 
+      - chunked
+      status: 
+      - 404 Not Found
+      cache-control: 
+      - no-cache
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.008759"
     body: |
-      <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-      <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-us" lang="en-us">
+      <!DOCTYPE html>
+      <html>
       <head>
+        <meta name="charset" content="utf-8" />
         <title>envision - Kanbanery</title>
-        <meta http-equiv="Content-type" content="text/html;charset=utf-8" />
-        <link rel="SHORTCUT ICON" href="http://kanbanery.com/favicon.ico" />
-        <link rel="icon" type="image/png" href="http://kanbanery.com/favicon.png" />
-        <link rel="apple-touch-icon" href="/images/iphone-icon.png" />
+      
+        <link rel="SHORTCUT ICON" href="/favicon.ico" />
+      <link rel="icon" type="image/png" href="/favicon.png" />
+      <link rel="apple-touch-icon" href="/images/iphone-icon.png" />
+      
+      
+        <link href="/assets/main.css?1299489467" media="all" rel="stylesheet" type="text/css" />
+      
         <script type="text/javascript">
           var Application = {};
           Application.domain = "kanbanery.com";
         </script>
-        <link href="/assets/main.css?1298034088" media="all" rel="stylesheet" type="text/css" />
-        <script src="/assets/main.js?1298034088" type="text/javascript"></script>
-        <script src="/js/templates.js?1298034181" type="text/javascript"></script>
+      
+        <script src="/assets/main.js?1299489467" type="text/javascript"></script>
+        <script src="/js/templates.js?1299489552" type="text/javascript"></script>
+      
         <script type="text/javascript">
           WEB_SOCKET_SWF_LOCATION = "/javascripts/vendor/web-socket-js/WebSocketMain.swf";
         </script>
+      
         
+      
         <script type="text/javascript">
           var initBoardData = [];
         </script>
+      
+        <!--[if lt IE 9]>
+          <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+        <![endif]-->
+      
       </head>
       <body>
         <div id="header" class="clearfix">
-          <h1><a href="http://kanbanery.com"><img alt="Kanbanery-logo-small" src="/images/kanbanery-logo-small.png?1298034021" /></a></h1>
+          <h1><a href="http://kanbanery.com/"><img alt="Kanbanery-logo-small" src="/images/kanbanery-logo-small.png?1299489403" /></a></h1>
           <ul id="account">
             <li><a href="http://support.kanbanery.com">Support</a></li>
-        <li><a href="/login">Sign in</a></li>
-        <li><a href="/pricing">Create an account</a></li>
+        <li><a href="https://kanbanery.com/login">Sign in</a></li>
+        <li><a href="http://kanbanery.com/pricing">Create an account</a></li>
       
           </ul>
             <div id="flash"></div>
