--- a/spec/cassettes/base/post.yml
+++ b/spec/cassettes/base/post.yml
@@ -12,22 +12,22 @@
       code: 404
       message: Not Found
     headers: 
-      x-ua-compatible: 
-      - IE=Edge,chrome=1
-      content-type: 
-      - text/html; charset=utf-8
       server: 
       - nginx/0.8.53
       date: 
       - <%= Time.now.utc %>
-      x-runtime: 
-      - "0.009443"
+      content-type: 
+      - text/html; charset=utf-8
+      transfer-encoding: 
+      - chunked
       status: 
       - 404 Not Found
       cache-control: 
       - no-cache
-      transfer-encoding: 
-      - chunked
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.009121"
     body: |
       <!DOCTYPE html>
       <html>
@@ -35,20 +35,20 @@
         <meta name="charset" content="utf-8" />
         <title>envision - Kanbanery</title>
       
-        <link rel="SHORTCUT ICON" href="http://kanbanery.com//favicon.ico" />
-      <link rel="icon" type="image/png" href="http://kanbanery.com//favicon.png" />
+        <link rel="SHORTCUT ICON" href="/favicon.ico" />
+      <link rel="icon" type="image/png" href="/favicon.png" />
       <link rel="apple-touch-icon" href="/images/iphone-icon.png" />
       
       
-        <link href="/assets/main.css?1299152942" media="all" rel="stylesheet" type="text/css" />
+        <link href="/assets/main.css?1299489467" media="all" rel="stylesheet" type="text/css" />
       
         <script type="text/javascript">
           var Application = {};
           Application.domain = "kanbanery.com";
         </script>
       
-        <script src="/assets/main.js?1299152941" type="text/javascript"></script>
-        <script src="/js/templates.js?1299152998" type="text/javascript"></script>
+        <script src="/assets/main.js?1299489467" type="text/javascript"></script>
+        <script src="/js/templates.js?1299489552" type="text/javascript"></script>
       
         <script type="text/javascript">
           WEB_SOCKET_SWF_LOCATION = "/javascripts/vendor/web-socket-js/WebSocketMain.swf";
@@ -67,7 +67,7 @@
       </head>
       <body>
         <div id="header" class="clearfix">
-          <h1><a href="http://kanbanery.com/"><img alt="Kanbanery-logo-small" src="/images/kanbanery-logo-small.png?1299152746" /></a></h1>
+          <h1><a href="http://kanbanery.com/"><img alt="Kanbanery-logo-small" src="/images/kanbanery-logo-small.png?1299489403" /></a></h1>
           <ul id="account">
             <li><a href="http://support.kanbanery.com">Support</a></li>
         <li><a href="https://kanbanery.com/login">Sign in</a></li>
@@ -106,7 +106,7 @@
   request: !ruby/struct:VCR::Request 
     method: :post
     uri: https://envision.kanbanery.com:443/api/v1/projects/2817/tasks.json
-    body: task[task_type_name]=Work%20Package&task[title]=Testing
+    body: task[title]=Testing&task[task_type_name]=Work%20Package
     headers: 
       x-kanbanery-apitoken: 
       - secret
@@ -115,21 +115,50 @@
       code: 201
       message: Created
     headers: 
-      x-ua-compatible: 
-      - IE=Edge,chrome=1
-      content-type: 
-      - application/json; charset=utf-8
-      x-runtime: 
-      - "0.276513"
-      date: 
-      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
-      cache-control: 
-      - no-cache
-      status: 
-      - 201 Created
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - application/json; charset=utf-8
       transfer-encoding: 
       - chunked
-    body: "{\"id\":37760,\"created_at\":\"2011-03-04T07:40:48+00:00\",\"updated_at\":\"2011-03-04T07:40:48+00:00\",\"title\":\"Testing\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":28,\"priority\":null,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+      status: 
+      - 201 Created
+      cache-control: 
+      - no-cache
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.281039"
+    body: "{\"id\":38705,\"created_at\":\"2011-03-10T19:01:02+00:00\",\"updated_at\":\"2011-03-10T19:01:02+00:00\",\"title\":\"Testing\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":86,\"priority\":null,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :head
+    uri: https://kanbanery.com:443/api/v1/test.json
+    body: 
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 404
+      message: Not Found
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - text/html; charset=utf-8
+      status: 
+      - 404 Not Found
+      cache-control: 
+      - no-cache
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.006149"
+    body: 
     http_version: "1.1"
