--- a/spec/cassettes/cassette3.yml
+++ b/spec/cassettes/cassette3.yml
@@ -12,23 +12,52 @@
       code: 200
       message: OK
     headers: 
-      x-ua-compatible: 
-      - IE=Edge,chrome=1
-      etag: 
-      - "\"55ee8571654a0a6506cd809cc287c386\""
-      content-type: 
-      - application/json; charset=utf-8
-      x-runtime: 
-      - "0.070428"
-      date: 
-      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
-      cache-control: 
-      - max-age=0, private, must-revalidate
-      status: 
-      - 200 OK
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - application/json; charset=utf-8
       transfer-encoding: 
       - chunked
+      status: 
+      - 200 OK
+      etag: 
+      - "\"55ee8571654a0a6506cd809cc287c386\""
+      cache-control: 
+      - max-age=0, private, must-revalidate
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.059259"
     body: "[{\"id\":15592,\"created_at\":\"2011-01-19T00:21:03+00:00\",\"updated_at\":\"2011-01-19T00:21:03+00:00\",\"name\":\"Work Package\",\"color_code\":9,\"project_id\":2817,\"position\":1,\"background_color\":\"#472bd6\",\"text_color\":\"#fff\",\"type\":\"TaskType\"},{\"id\":15593,\"created_at\":\"2011-01-19T00:21:19+00:00\",\"updated_at\":\"2011-01-19T00:21:19+00:00\",\"name\":\"Event\",\"color_code\":0,\"project_id\":2817,\"position\":2,\"background_color\":\"#ff3333\",\"text_color\":\"#fff\",\"type\":\"TaskType\"}]"
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :head
+    uri: https://kanbanery.com:443/api/v1/test.json
+    body: 
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 404
+      message: Not Found
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - text/html; charset=utf-8
+      status: 
+      - 404 Not Found
+      cache-control: 
+      - no-cache
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.005414"
+    body: 
     http_version: "1.1"
