--- a/spec/cassettes/task/find.yml
+++ b/spec/cassettes/task/find.yml
@@ -12,23 +12,52 @@
       code: 201
       message: Created
     headers: 
-      x-ua-compatible: 
-      - IE=Edge,chrome=1
-      content-type: 
-      - application/json; charset=utf-8
       server: 
       - nginx/0.8.53
       date: 
       - <%= Time.now.utc %>
-      x-runtime: 
-      - "0.266290"
+      content-type: 
+      - application/json; charset=utf-8
+      transfer-encoding: 
+      - chunked
       status: 
       - 201 Created
       cache-control: 
       - no-cache
-      transfer-encoding: 
-      - chunked
-    body: "{\"id\":36831,\"created_at\":\"2011-02-25T06:41:55+00:00\",\"updated_at\":\"2011-02-25T06:41:55+00:00\",\"title\":\"Test Task\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":25,\"priority\":null,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.428233"
+    body: "{\"id\":38721,\"created_at\":\"2011-03-10T19:12:05+00:00\",\"updated_at\":\"2011-03-10T19:12:05+00:00\",\"title\":\"Test Task\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":96,\"priority\":null,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :head
+    uri: https://kanbanery.com:443/api/v1/test.json
+    body: 
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 404
+      message: Not Found
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - text/html; charset=utf-8
+      status: 
+      - 404 Not Found
+      cache-control: 
+      - no-cache
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.006586"
+    body: 
     http_version: "1.1"
 - !ruby/struct:VCR::HTTPInteraction 
   request: !ruby/struct:VCR::Request 
@@ -43,28 +72,28 @@
       code: 404
       message: Not Found
     headers: 
-      x-ua-compatible: 
-      - IE=Edge,chrome=1
-      content-type: 
-      - application/json; charset=utf-8
       server: 
       - nginx/0.8.53
       date: 
       - <%= Time.now.utc %>
-      x-runtime: 
-      - "0.022301"
+      content-type: 
+      - application/json; charset=utf-8
+      transfer-encoding: 
+      - chunked
       status: 
       - 404 Not Found
       cache-control: 
       - no-cache
-      transfer-encoding: 
-      - chunked
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.025762"
     body: 404 Not Found
     http_version: "1.1"
 - !ruby/struct:VCR::HTTPInteraction 
   request: !ruby/struct:VCR::Request 
     method: :get
-    uri: https://envision.kanbanery.com:443/api/v1/tasks/36831.json
+    uri: https://envision.kanbanery.com:443/api/v1/tasks/38721.json
     body: 
     headers: 
       x-kanbanery-apitoken: 
@@ -74,23 +103,23 @@
       code: 200
       message: OK
     headers: 
-      x-ua-compatible: 
-      - IE=Edge,chrome=1
-      etag: 
-      - "\"61ab00167bdcf9917241ce107d897159\""
-      content-type: 
-      - application/json; charset=utf-8
-      x-runtime: 
-      - "0.060737"
-      date: 
-      - <%= Time.now.utc %>
       server: 
       - nginx/0.8.53
-      cache-control: 
-      - max-age=0, private, must-revalidate
-      status: 
-      - 200 OK
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - application/json; charset=utf-8
       transfer-encoding: 
       - chunked
-    body: "{\"id\":36831,\"created_at\":\"2011-02-25T06:41:55+00:00\",\"updated_at\":\"2011-02-25T06:41:55+00:00\",\"title\":\"Test Task\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":25,\"priority\":0,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+      status: 
+      - 200 OK
+      etag: 
+      - "\"3b63ce90bba1c5b069de33bf29d51ada\""
+      cache-control: 
+      - max-age=0, private, must-revalidate
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.074652"
+    body: "{\"id\":38721,\"created_at\":\"2011-03-10T19:12:05+00:00\",\"updated_at\":\"2011-03-10T19:12:05+00:00\",\"title\":\"Test Task\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":96,\"priority\":0,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
     http_version: "1.1"
