--- a/spec/cassettes/task/update.yml
+++ b/spec/cassettes/task/update.yml
@@ -27,13 +27,42 @@
       x-ua-compatible: 
       - IE=Edge,chrome=1
       x-runtime: 
-      - "0.238226"
-    body: "{\"id\":37898,\"created_at\":\"2011-03-06T06:18:34+00:00\",\"updated_at\":\"2011-03-06T06:18:34+00:00\",\"title\":\"Test Task\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":41,\"priority\":null,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+      - "0.375618"
+    body: "{\"id\":38708,\"created_at\":\"2011-03-10T19:02:20+00:00\",\"updated_at\":\"2011-03-10T19:02:20+00:00\",\"title\":\"Test Task\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":89,\"priority\":null,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :head
+    uri: https://kanbanery.com:443/api/v1/test.json
+    body: 
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 404
+      message: Not Found
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - text/html; charset=utf-8
+      status: 
+      - 404 Not Found
+      cache-control: 
+      - no-cache
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.007011"
+    body: 
     http_version: "1.1"
 - !ruby/struct:VCR::HTTPInteraction 
   request: !ruby/struct:VCR::Request 
     method: :put
-    uri: https://envision.kanbanery.com:443/api/v1/tasks/37898.json
+    uri: https://envision.kanbanery.com:443/api/v1/tasks/38708.json
     body: task[title]=New%20title&task[owner_id]=
     headers: 
       x-kanbanery-apitoken: 
@@ -54,19 +83,48 @@
       status: 
       - 200 OK
       etag: 
-      - "\"30cf80af1504ef3b4ee4544d5a8294bc\""
+      - "\"321869e3cf77e30d485edca7b8a0ef7c\""
       cache-control: 
       - max-age=0, private, must-revalidate
       x-ua-compatible: 
       - IE=Edge,chrome=1
       x-runtime: 
-      - "0.140589"
-    body: "{\"id\":37898,\"created_at\":\"2011-03-06T06:18:34+00:00\",\"updated_at\":\"2011-03-06T06:18:38+00:00\",\"title\":\"New title\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":41,\"priority\":0,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+      - "0.179493"
+    body: "{\"id\":38708,\"created_at\":\"2011-03-10T19:02:20+00:00\",\"updated_at\":\"2011-03-10T19:02:29+00:00\",\"title\":\"New title\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":89,\"priority\":0,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :head
+    uri: https://kanbanery.com:443/api/v1/test.json
+    body: 
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 404
+      message: Not Found
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - text/html; charset=utf-8
+      status: 
+      - 404 Not Found
+      cache-control: 
+      - no-cache
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.006719"
+    body: 
     http_version: "1.1"
 - !ruby/struct:VCR::HTTPInteraction 
   request: !ruby/struct:VCR::Request 
     method: :get
-    uri: https://envision.kanbanery.com:443/api/v1/tasks/37898.json
+    uri: https://envision.kanbanery.com:443/api/v1/tasks/38708.json
     body: 
     headers: 
       x-kanbanery-apitoken: 
@@ -87,12 +145,41 @@
       status: 
       - 200 OK
       etag: 
-      - "\"30cf80af1504ef3b4ee4544d5a8294bc\""
+      - "\"321869e3cf77e30d485edca7b8a0ef7c\""
       cache-control: 
       - max-age=0, private, must-revalidate
       x-ua-compatible: 
       - IE=Edge,chrome=1
       x-runtime: 
-      - "0.056801"
-    body: "{\"id\":37898,\"created_at\":\"2011-03-06T06:18:34+00:00\",\"updated_at\":\"2011-03-06T06:18:38+00:00\",\"title\":\"New title\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":41,\"priority\":0,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+      - "0.044225"
+    body: "{\"id\":38708,\"created_at\":\"2011-03-10T19:02:20+00:00\",\"updated_at\":\"2011-03-10T19:02:29+00:00\",\"title\":\"New title\",\"description\":null,\"task_type_id\":15592,\"estimate_id\":null,\"column_id\":15090,\"creator_id\":2608,\"owner_id\":null,\"position\":89,\"priority\":0,\"ready_to_pull\":false,\"moved_at\":null,\"deadline\":null,\"blocked\":false,\"type\":\"Task\"}"
+    http_version: "1.1"
+- !ruby/struct:VCR::HTTPInteraction 
+  request: !ruby/struct:VCR::Request 
+    method: :head
+    uri: https://kanbanery.com:443/api/v1/test.json
+    body: 
+    headers: 
+      x-kanbanery-apitoken: 
+      - secret
+  response: !ruby/struct:VCR::Response 
+    status: !ruby/struct:VCR::ResponseStatus 
+      code: 404
+      message: Not Found
+    headers: 
+      server: 
+      - nginx/0.8.53
+      date: 
+      - <%= Time.now.utc %>
+      content-type: 
+      - text/html; charset=utf-8
+      status: 
+      - 404 Not Found
+      cache-control: 
+      - no-cache
+      x-ua-compatible: 
+      - IE=Edge,chrome=1
+      x-runtime: 
+      - "0.006471"
+    body: 
     http_version: "1.1"
